--- a/package.json
+++ b/package.json
@@ -16,5 +16,14 @@
   "bugs": {
     "url": "https://github.com/xavierventeo/openai-translator-chat/issues"
   },
-  "homepage": "https://github.com/xavierventeo/openai-translator-chat#readme"
+  "homepage": "https://github.com/xavierventeo/openai-translator-chat#readme",
+  "dependencies": {
+    "axios": "^1.9.0",
+    "dotenv": "^16.5.0",
+    "express": "^5.1.0",
+    "openai": "^4.96.0"
+  },
+  "devDependencies": {
+    "nodemon": "^3.1.10"
+  }
 }
