--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "description": "OpenAI Translator Chat",
   "main": "app.js",
   "scripts": {
+    "start": "nodemon app.js",
+    "serve": "node app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
